src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_TypeAT__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Choose what category the Product falls into</inlineHelpText>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exam Papers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Courses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_type__c</fullName>
        <label>Product type</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor (ID)</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_period__c</fullName>
        <label>Warranty period</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Alzheimer_Trading_Ltd_Products</fullName>
        <active>true</active>
        <description>Alzheimer&apos;s Trading Ltd Products</description>
        <label>Alzheimer&apos;s Trading Ltd Products</label>
    </recordTypes>
</CustomObject>